--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>shallow-time-web</title>
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <title>A.R.T.U.R.</title>
   </head>
   <body>
     <div id="app"></div>
